--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="col s6"><h5 class="center-align">カンパニーロゴについて</h5></div>
       </div>
       <div class="row">
-        <div class="card-panel col s6 center-align">DearliyOrange</div>
-        <div class="card-panel col s6 center-align">DearliyBlue</div>
+        <div class="card-panel col s6 center-align"><img src="./assets/images/Orange-01.png" alt="Dearliyロゴ"></div>
+        <div class="card-panel col s6 center-align"><img src="./assets/images/Blue-02.png" alt="Dearliyロゴ"></div>
         <div class="card-panel col s12 left-align">
           <p>
             昼と夜をイメージした、暖かさと落ち着きを表現した二つのパターンで色を採用しています。<br />
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="card-panel col s4 center-align">カンパニーロゴ</div>
+        <div class="card-panel col s4 center-align"><img src="./assets/images/Orange-01.png" alt="Dearliyロゴ"></div>
         <div class="card-panel col s8 center-align">
           <p>
             社名の由来でもある、<br />
@@ -251,7 +251,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container black-text">
-          © 2020 Copyright Text
+          <img class="footer-text" src="./assets/images/Orange-06.png" alt="">
         </div>
       </div>
     </footer>
