--- a/inquiry/index.html
+++ b/inquiry/index.html
@@ -65,7 +65,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container black-text">
-          © 2020 Copyright Text
+          <img class="footer-text" src="./assets/images/Orange-06.png" alt="">
         </div>
       </div>
     </footer>
