--- a/inquiry/thanks/index.html
+++ b/inquiry/thanks/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container black-text">
-          © 2020 Copyright Text
+          <img class="footer-text" src="./assets/images/Orange-06.png" alt="">
         </div>
       </div>
     </footer>
