modify to title-text from orange-text

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <header>
       <div class="inline">
-        <a href="#" id="logo"><img src="./assets/images/Orange-01.png" alt="Dearliyロゴ"></a>
+        <a href="#" class="logo"><img src="./assets/images/Orange-01.png" alt="Dearliyロゴ"></a>
       </div>
     </header>
     <div class="container">
-      <h4 class="center-align orange-text">企業理念</h4>
+      <h4 class="center-align title-text">企業理念</h4>
       <div class="row">
         <div class="col s4"><h5 class="center-align">VISION</h5><br />世界中の人々が「1日1日」人生を謳歌する社会の実現</div>
         <div class="col s4"><h5 class="center-align">MISSION</h5><br />人生（過去・現在・未来）を管理するスタンダードプラットフォームになる</div>
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="container">
-      <h4 class="center-align orange-text">コーポレートアイデンティティ</h4>
+      <h4 class="center-align title-text">コーポレートアイデンティティ</h4>
       <div class="row">
         <div class="col s6"><h5 class="center-align">カンパニーカラーについて</h5></div>
         <div class="col s6"><h5 class="center-align">カンパニーロゴについて</h5></div>
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div class="container">
-      <h4 class="center-align orange-text">会社概要</h4>
+      <h4 class="center-align title-text">会社概要</h4>
       <div class="row">
         <div class="col s4"><h5 class="center-align">代表挨拶</h5></div>
         <div class="col s8">
@@ -203,7 +203,7 @@
       
     </div>
     <div class="container">
-      <h4 class="center-align orange-text">問合せフォーム</h4>
+      <h4 class="center-align title-text">問合せフォーム</h4>
       <div class="bgcolor_white center">
         <div class="wrapper">
           <form>
@@ -233,19 +233,19 @@
       </div>
     </div>
     <br />
-    <footer class="page-footer">
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h6 class="orange-text">各種SNS</h6>
+            <h6 class="title-text">各種SNS</h6>
             <div class="facebook orange-text">FaceBook</div>
             <div class="twitter orange-text">twitter</div>
           </div>
-          <div class="col l4 offset-l2 s12">
-            <a class="link orange-text text-lighten-3" href="#!">運営会社情報Link</a>
+          <div class="link col l3 offset-l2 s12">
+            <a class="title-text text-lighten-3" href="#!">運営会社情報Link</a>
           </div>
-          <div class="col l4 offset-l2 s12">
-            <a class="link orange-text text-lighten-3" href="#!">問い合わせフォーム</a>
+          <div class="link col l3 offset-l2 s12">
+            <a class="title-text text-lighten-3" href="#!">問い合わせフォーム</a>
           </div>
         </div>
       </div>
@@ -255,5 +255,8 @@
         </div>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+    <script src="./assets/js/time.js"></script>
   </body>
 </html>
