--- a/inquiry/index.html
+++ b/inquiry/index.html
@@ -12,11 +12,11 @@
   <body>
     <header>
       <div class="inline">
-        <a href="#" id="logo"><img src="../assets/images/Orange-01.png" alt="Dearliyロゴ"></a>
+        <a href="#" class="logo"><img src="../assets/images/Orange-01.png" alt="Dearliyロゴ"></a>
       </div>
     </header>
     <div class="container">
-      <h4 class="center-align orange-text">問合せ内容確認</h4>
+      <h4 class="center-align title-text">問合せ内容確認</h4>
       <div class="bgcolor_white center">
         <div class="wrapper">
           <form>
@@ -51,15 +51,15 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h6 class="orange-text">各種SNS</h6>
+            <h6 class="title-text">各種SNS</h6>
             <div class="facebook orange-text">FaceBook</div>
             <div class="twitter orange-text">twitter</div>
           </div>
           <div class="col l4 offset-l2 s12">
-            <a class="link orange-text text-lighten-3" href="#!">運営会社情報Link</a>
+            <a class="link title-text text-lighten-3" href="#!">運営会社情報Link</a>
           </div>
           <div class="col l4 offset-l2 s12">
-            <a class="link orange-text text-lighten-3" href="#!">問い合わせフォーム</a>
+            <a class="link title-text text-lighten-3" href="#!">問い合わせフォーム</a>
           </div>
         </div>
       </div>
