--- a/inquiry/thanks/index.html
+++ b/inquiry/thanks/index.html
@@ -12,11 +12,11 @@
   <body>
     <header>
       <div class="inline">
-        <a href="#" id="logo"><img src="../../assets/images/Orange-01.png" alt="Dearliyロゴ"></a>
+        <a href="#" class="logo"><img src="../../assets/images/Orange-01.png" alt="Dearliyロゴ"></a>
       </div>
     </header>
     <div class="content">
-      <h5 class="answer center-align orange-text">ご連絡いただきありがとうございました。</h5>
+      <h5 class="answer center-align title-text">ご連絡いただきありがとうございました。</h5>
       <div class="center btn_contact">
         <input type="submit" name="commit" value="戻る" data-disable-with="戻る">
       </div>
@@ -25,15 +25,15 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h6 class="orange-text">各種SNS</h6>
+            <h6 class="title-text">各種SNS</h6>
             <div class="facebook orange-text">FaceBook</div>
             <div class="twitter orange-text">twitter</div>
           </div>
           <div class="col l4 offset-l2 s12">
-            <a class="link orange-text text-lighten-3" href="#!">運営会社情報Link</a>
+            <a class="link title-text text-lighten-3" href="#!">運営会社情報Link</a>
           </div>
           <div class="col l4 offset-l2 s12">
-            <a class="link orange-text text-lighten-3" href="#!">問い合わせフォーム</a>
+            <a class="link title-text text-lighten-3" href="#!">問い合わせフォーム</a>
           </div>
         </div>
       </div>
