--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <textarea name="content" id="content" required="required"></textarea>
             </div>
             <div class="center btn_contact">
-              <input type="submit" name="commit" value="送信" data-disable-with="送信">
+              <input type="submit" id="confirm" name="commit" value="送信">
             </div>
           </form>
         </div>
@@ -258,5 +258,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script src="./assets/js/time.js"></script>
+    <script src="./assets/js/inquiry-form.js"></script>
   </body>
 </html>
