--- a/inquiry/index.html
+++ b/inquiry/index.html
@@ -22,25 +22,25 @@
           <form>
             <div class="flex">
               <label for="family_name">お名前（姓）</label>
-              <input type="text" name="family_name" id="family_name" value="長谷川" readonly>
+              <input type="text" name="family_name" id="family_name" readonly>
               <label for="first_name" class="label2">（名）</label>
-              <input type="text" name="first_name" id="first_name" value="太一朗" readonly>
+              <input type="text" name="first_name" id="first_name" readonly>
             </div>
             <div class="flex">
               <label for="email">メールアドレス</label>
-              <input type="email" name="email" id="email" value="taichiro.hasegawa@dearliy.co.jp" readonly>
+              <input type="email" name="email" id="email" readonly>
             </div>
             <div class="flex">
               <label for="email">メールアドレス（確認）</label>
-              <input type="email" name="confirm-email" id="confirm-email" value="taichiro.hasegawa@dearliy.co.jp" readonly>
+              <input type="email" name="confirm-email" id="confirm-email" readonly>
             </div>
             <div class="flex">
               <label for="content">お問い合わせ内容</label>
-              <textarea name="content" id="content" readonly>testtesttest</textarea>
+              <textarea name="content" id="content" readonly></textarea>
             </div>
             <div class="center btn_contact">
-              <input type="submit" name="commit" value="戻る" data-disable-with="戻る">
-              <input type="submit" name="commit" value="送信" data-disable-with="送信">
+              <input type="submit" id="cancel" name="commit" value="戻る">
+              <input type="submit" id="submit" name="commit" value="送信">
             </div>
           </form>
         </div>
@@ -69,5 +69,9 @@
         </div>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+    <script src="../assets/js/time.js"></script>
+    <script src="../assets/js/inquiry-form.js"></script>
   </body>
 </html>
