--- a/inquiry/thanks/index.html
+++ b/inquiry/thanks/index.html
@@ -18,7 +18,7 @@
     <div class="content">
       <h5 class="answer center-align title-text">ご連絡いただきありがとうございました。</h5>
       <div class="center btn_contact">
-        <input type="submit" name="commit" value="戻る" data-disable-with="戻る">
+        <input type="submit" id="cancel" name="commit" value="戻る">
       </div>
     </div>
     <footer class="page-footer">
@@ -43,5 +43,9 @@
         </div>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+    <script src="../../assets/js/time.js"></script>
+    <script src="../../assets/js/inquiry-form.js"></script>
   </body>
 </html>
