--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <textarea name="content" id="content" required="required"></textarea>
             </div>
             <div class="center btn_contact">
-              <input type="submit" id="confirm" name="commit" value="送信">
+              <input type="submit" id="confirm" class="btn" name="commit" value="送信">
             </div>
           </form>
         </div>
