--- a/inquiry/index.html
+++ b/inquiry/index.html
@@ -39,8 +39,8 @@
               <textarea name="content" id="content" readonly></textarea>
             </div>
             <div class="center btn_contact">
-              <input type="submit" id="cancel" name="commit" value="戻る">
-              <input type="submit" id="submit" name="commit" value="送信">
+              <input type="submit" id="cancel" class="btn" name="commit" value="戻る">
+              <input type="submit" id="submit" class="btn" name="commit" value="送信">
             </div>
           </form>
         </div>
