--- a/inquiry/thanks/index.html
+++ b/inquiry/thanks/index.html
@@ -18,7 +18,7 @@
     <div class="content">
       <h5 class="answer center-align title-text">ご連絡いただきありがとうございました。</h5>
       <div class="center btn_contact">
-        <input type="submit" id="cancel" name="commit" value="戻る">
+        <input type="submit" id="cancel" class="btn" name="commit" value="戻る">
       </div>
     </div>
     <footer class="page-footer">
